--- a/style.css
+++ b/style.css
@@ -1,11 +1,39 @@
-body{
-    font-family: Arial, Helvetica, sans-serif;
+*{
     margin: 0;
     padding: 0;
-    background-color: #69657B;
+    box-sizing: border-box;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+
 }
 
 h1{
     font-weight: 700;
-   color: aquamarine;
+}
+
+.header-center{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: auto;
+    overflow: hidden;
+    
+}
+
+.Projects{
+padding: 40;
+width: 100;
+}
+.container{
+    width: 100%;
+    height: 80vh;
+    background:#2b323c ;
+    color: #fff;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.container h1{
+    font-size: 80px;
+    font-weight: 600;
+
 }
