--- a/style.css
+++ b/style.css
@@ -16,9 +16,11 @@ h1{
     justify-content: center;
     height: auto;
     overflow: hidden;
-    
-}
 
+}
+a{
+padding:13px;
+}
 .Projects{
 padding: 40;
 width: 100;
