--- a/style.css
+++ b/style.css
@@ -1,45 +1,166 @@
+
+
+@import url('https://fonts.googleapis.com/css2?family=Montserrat+Alternates:wght@400;500&display=swap');
+
+
+:root{
+ --header-height: 3.5rem;
+
+ /*=====Colors======*/
+ --white-color:hsl(0,0%,100%);
+ --black-color:hsl(0, 0%, 0%);
+
+  /*=====Font and Typograhpy======*/
+   /*.5rem = 8px | 1rem = 16px */
+
+ --body-font:"Montserrat Alternates",sans-serif;
+ --h1-font-size: 1.5rem;
+ --normal-font-size: .938rem;
+
+    /*=====Font Weight======*/
+ --font-regular: 400;
+ --font-medium: 500;
+
+  /*====Z-index======*/
+  --z-tootltip: 10;
+  --z-fixed: 100;
+}
+
+ /*=====Responsive Typography======*/
+@media screen and (min-width:1150px){
+    :root{
+        --normal-font-size:1rem;
+    }
+}
+ /*=====Base======*/
 *{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    font-family: "Montseratt Alternates", sans-serif;
 
 }
+
+body{
+    font-family: var(--body-font);
+    font-size: var(--normal-font-size);
+    background-color: var(--white-color);
+}
+
+ul{
+    list-style: none;
+}
+a{
+    text-decoration: none;
+}
+
+
 
 h1{
     font-weight: 700;
 }
 
+/*=====HEADER & NAV =======*/
 .header{
+   position: fixed; 
+   width: 100%;
+   top: 0;
+   left:0;
+   background-color: var(--black-color);
+   z-index: var(--z-fixed);
+}
+.navcontainer{
+    position: relative;
+    height: var(--header-height);
     display: flex;
+    justify-content: space-between;
     align-items: center;
-    justify-content: center;
-    height: auto;
-    overflow: hidden;
-    background-color:  #4e5d72;
 }
-a{
-padding: 14px;
-border-radius: 50px;
+.navlogo{
+    color: var(--white-color);
+    font-weight: var(--font-medium);
 }
-.Projects{
-padding: 10px;
-border-radius: 50px;
-width: 100;
-background-color: beige;
+.nav__close,
+.nav__toggle{
+    display: flex;
+    color: var(--white-color);
+    font-size: 1.5rem;
+    cursor: pointer;
+}
+/* Nav for mobile devices*/
+@media screen and (max-width: 1150px){
+    .nav__menu{
+        position:fixed;
+        left: 0;
+        top: 0;
+        background-color:var(--black-color) ;
+        width: 100%;
+        height: 100%;
+        padding: 6rem 3.5rem 4.5rem;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+        transition: left .4s;
+    }
 }
 
-.About{
-padding:10px;
-background-color: beige;
-border-radius:50px;
-width:100;
+.nav_list, 
+.nav__social{
+display: flex;
 }
-.Contact{
-    padding: 10px;
-    background-color: beige;
+
+.nav_list{
+    flex-direction: column;
+    row-gap:3rem;
+}
+
+.nav__link{
+    position: relative;
+    color: var(--white-color);
+    font-size: var(--h1-font-size);
+    font-weight: var(--font-medium);
+    display: inline-flex;
+    align-items: center;
+    transition: opacity .4s;
+}
+
+.nav__link i{
+    font-size: 2rem;
+    position: absolute;
+    opacity: 0;
+    visibility: hidden;
+    transition: opacity .4s, visibility .4s;
+}
+
+.nav__link span{
+    position: relative;
+    transition: margin .4s;
+}
+
+.nav__link span::after{
+    content:'';
+    position:absolute;
+    left: 0;
+    bottom: -6px;
+    width: 0;
+    height:2px;
+    background-color: var(--white-color);
+    transition: width .4s ease-out;
 
 }
+
+/*Animation link on hover*/
+.nav__link:hover span{
+ margin-left: 2.5rem;
+ 
+}
+/* Sibling fade animation*/
+
+/* show menu*/
+
+/* Animation link when displaying menu*/
+
+
 .container{
     width: 100%;
     height: 80vh;
