--- a/style.css
+++ b/style.css
@@ -366,6 +366,10 @@ opacity: .4;
     padding: 3rem 1rem;
 }
 
+ #blog{
+    height:60vh;
+}
+
 .section h2 {
     color: var(--accent-color);
     font-size: 2.5rem;
