worked on stylesheet for blogs, centering content, still needs more work

--- a/blogs/blog.css
+++ b/blogs/blog.css
@@ -84,6 +84,11 @@ a {
     text-align: center;
 }
 
+#Az-Intro{
+    display:flex;
+    justify-content:center;
+}
+
 a:hover {
     color: var(--accent-color);
 }
